packages/@aws-cdk-testing/framework-integ/test/aws-eks/test/integ.fargate-cluster.js.snapshot/aws-cdk-eks-fargate-cluster-test-stack1.template.json
{
 "Resources": {
  "DummyVpcB6C30D0C": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc"
     }
    ]
   }
  },
  "DummyVpcPublicSubnet1Subnet1073B36B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "DummyVpcPublicSubnet1RouteTable112DCFCF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "DummyVpcPublicSubnet1RouteTableAssociation8BCD2CE1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DummyVpcPublicSubnet1RouteTable112DCFCF"
    },
    "SubnetId": {
     "Ref": "DummyVpcPublicSubnet1Subnet1073B36B"
    }
   }
  },
  "DummyVpcPublicSubnet1DefaultRoute166DC84B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DummyVpcIGW6BB373C0"
    },
    "RouteTableId": {
     "Ref": "DummyVpcPublicSubnet1RouteTable112DCFCF"
    }
   },
   "DependsOn": [
    "DummyVpcVPCGW1C2C3DF0"
   ]
  },
  "DummyVpcPublicSubnet1EIPEF91269A": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PublicSubnet1"
     }
    ]
   }
  },
  "DummyVpcPublicSubnet1NATGateway61554370": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "DummyVpcPublicSubnet1EIPEF91269A",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "DummyVpcPublicSubnet1Subnet1073B36B"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "DummyVpcPublicSubnet1DefaultRoute166DC84B",
    "DummyVpcPublicSubnet1RouteTableAssociation8BCD2CE1"
   ]
  },
  "DummyVpcPublicSubnet2SubnetD8B68431": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "DummyVpcPublicSubnet2RouteTableCC0ACEA3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "DummyVpcPublicSubnet2RouteTableAssociationDCE3DC57": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DummyVpcPublicSubnet2RouteTableCC0ACEA3"
    },
    "SubnetId": {
     "Ref": "DummyVpcPublicSubnet2SubnetD8B68431"
    }
   }
  },
  "DummyVpcPublicSubnet2DefaultRoute1C29EE76": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DummyVpcIGW6BB373C0"
    },
    "RouteTableId": {
     "Ref": "DummyVpcPublicSubnet2RouteTableCC0ACEA3"
    }
   },
   "DependsOn": [
    "DummyVpcVPCGW1C2C3DF0"
   ]
  },
  "DummyVpcPrivateSubnet1SubnetAF2DFEB1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "DummyVpcPrivateSubnet1RouteTableD58FDCEA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "DummyVpcPrivateSubnet1RouteTableAssociation88B5105F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DummyVpcPrivateSubnet1RouteTableD58FDCEA"
    },
    "SubnetId": {
     "Ref": "DummyVpcPrivateSubnet1SubnetAF2DFEB1"
    }
   }
  },
  "DummyVpcPrivateSubnet1DefaultRouteE47453F6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DummyVpcPublicSubnet1NATGateway61554370"
    },
    "RouteTableId": {
     "Ref": "DummyVpcPrivateSubnet1RouteTableD58FDCEA"
    }
   }
  },
  "DummyVpcPrivateSubnet2Subnet718780F7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "DummyVpcPrivateSubnet2RouteTable1FB64BA1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "DummyVpcPrivateSubnet2RouteTableAssociationC3594446": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DummyVpcPrivateSubnet2RouteTable1FB64BA1"
    },
    "SubnetId": {
     "Ref": "DummyVpcPrivateSubnet2Subnet718780F7"
    }
   }
  },
  "DummyVpcPrivateSubnet2DefaultRoute4E564518": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DummyVpcPublicSubnet1NATGateway61554370"
    },
    "RouteTableId": {
     "Ref": "DummyVpcPrivateSubnet2RouteTable1FB64BA1"
    }
   }
  },
  "DummyVpcIGW6BB373C0": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test-stack1/DummyVpc"
     }
    ]
   }
  },
  "DummyVpcVPCGW1C2C3DF0": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "DummyVpcIGW6BB373C0"
    },
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "KubectlLayer600207B5": {
   "Type": "AWS::Lambda::LayerVersion",
   "Properties": {
    "Content": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "83632ece0504813b45bee35f07cc09a93e3db6c74796e1adbcb7990e7f251f17.zip"
    },
    "Description": "/opt/kubectl/kubectl 1.36.2; /opt/helm/helm 4.2.2",
    "LicenseInfo": "Apache-2.0"
   }
  },
  "FargateClusterKubectlHandlerRole93DCDA21": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryPullOnly"
       ]
      ]
     },
     {
      "Fn::If": [
       "FargateClusterHasEcrPublic3641FEA6",
       {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":iam::aws:policy/AmazonElasticContainerRegistryPublicReadOnly"
         ]
        ]
       },
       {
        "Ref": "AWS::NoValue"
       }
      ]
     }
    ]
   }
  },
  "FargateClusterKubectlHandlerRoleDefaultPolicy3F5DBBB0": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "eks:DescribeCluster",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FargateCluster019F03E8",
         "Arn"
        ]
       }
      },
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FargateClusterCreationRole8C524AD8",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FargateClusterKubectlHandlerRoleDefaultPolicy3F5DBBB0",
    "Roles": [
     {
      "Ref": "FargateClusterKubectlHandlerRole93DCDA21"
     }
    ]
   }
  },
  "FargateClusterRole8E36B33A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSClusterPolicy"
       ]
      ]
     }
    ]
   }
  },
  "FargateClusterControlPlaneSecurityGroup1021A150": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "EKS Control Plane Security Group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "DummyVpcB6C30D0C"
    }
   }
  },
  "FargateClusterCreationRole8C524AD8": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": [
         {
          "Fn::GetAtt": [
           "FargateClusterKubectlHandlerRole93DCDA21",
           "Arn"
          ]
         },
         {
          "Fn::GetAtt": [
           "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
           "Outputs.awscdkeksfargateclusterteststack1awscdkawseksClusterResourceProviderIsCompleteHandlerServiceRoleB40E526BArn"
          ]
         },
         {
          "Fn::GetAtt": [
           "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
           "Outputs.awscdkeksfargateclusterteststack1awscdkawseksClusterResourceProviderOnEventHandlerServiceRole0234D305Arn"
          ]
         }
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "DummyVpcIGW6BB373C0",
    "DummyVpcPrivateSubnet1DefaultRouteE47453F6",
    "DummyVpcPrivateSubnet1RouteTableD58FDCEA",
    "DummyVpcPrivateSubnet1RouteTableAssociation88B5105F",
    "DummyVpcPrivateSubnet1SubnetAF2DFEB1",
    "DummyVpcPrivateSubnet2DefaultRoute4E564518",
    "DummyVpcPrivateSubnet2RouteTable1FB64BA1",
    "DummyVpcPrivateSubnet2RouteTableAssociationC3594446",
    "DummyVpcPrivateSubnet2Subnet718780F7",
    "DummyVpcPublicSubnet1DefaultRoute166DC84B",
    "DummyVpcPublicSubnet1EIPEF91269A",
    "DummyVpcPublicSubnet1NATGateway61554370",
    "DummyVpcPublicSubnet1RouteTable112DCFCF",
    "DummyVpcPublicSubnet1RouteTableAssociation8BCD2CE1",
    "DummyVpcPublicSubnet1Subnet1073B36B",
    "DummyVpcPublicSubnet2DefaultRoute1C29EE76",
    "DummyVpcPublicSubnet2RouteTableCC0ACEA3",
    "DummyVpcPublicSubnet2RouteTableAssociationDCE3DC57",
    "DummyVpcPublicSubnet2SubnetD8B68431",
    "DummyVpcB6C30D0C",
    "DummyVpcVPCGW1C2C3DF0"
   ]
  },
  "FargateClusterCreationRoleDefaultPolicy629049D0": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "FargateClusterRole8E36B33A",
          "Arn"
         ]
        },
        {
         "Fn::GetAtt": [
          "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
          "Arn"
         ]
        }
       ]
      },
      {
       "Action": [
        "eks:CreateCluster",
        "eks:CreateFargateProfile",
        "eks:DeleteCluster",
        "eks:DescribeCluster",
        "eks:DescribeUpdate",
        "eks:TagResource",
        "eks:UntagResource",
        "eks:UpdateClusterConfig",
        "eks:UpdateClusterVersion"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "eks:DeleteFargateProfile",
        "eks:DescribeFargateProfile"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "ec2:DescribeDhcpOptions",
        "ec2:DescribeInstances",
        "ec2:DescribeNetworkInterfaces",
        "ec2:DescribeRouteTables",
        "ec2:DescribeSecurityGroups",
        "ec2:DescribeSubnets",
        "ec2:DescribeVpcs",
        "iam:CreateServiceLinkedRole",
        "iam:GetRole",
        "iam:listAttachedRolePolicies"
       ],
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FargateClusterCreationRoleDefaultPolicy629049D0",
    "Roles": [
     {
      "Ref": "FargateClusterCreationRole8C524AD8"
     }
    ]
   },
   "DependsOn": [
    "DummyVpcIGW6BB373C0",
    "DummyVpcPrivateSubnet1DefaultRouteE47453F6",
    "DummyVpcPrivateSubnet1RouteTableD58FDCEA",
    "DummyVpcPrivateSubnet1RouteTableAssociation88B5105F",
    "DummyVpcPrivateSubnet1SubnetAF2DFEB1",
    "DummyVpcPrivateSubnet2DefaultRoute4E564518",
    "DummyVpcPrivateSubnet2RouteTable1FB64BA1",
    "DummyVpcPrivateSubnet2RouteTableAssociationC3594446",
    "DummyVpcPrivateSubnet2Subnet718780F7",
    "DummyVpcPublicSubnet1DefaultRoute166DC84B",
    "DummyVpcPublicSubnet1EIPEF91269A",
    "DummyVpcPublicSubnet1NATGateway61554370",
    "DummyVpcPublicSubnet1RouteTable112DCFCF",
    "DummyVpcPublicSubnet1RouteTableAssociation8BCD2CE1",
    "DummyVpcPublicSubnet1Subnet1073B36B",
    "DummyVpcPublicSubnet2DefaultRoute1C29EE76",
    "DummyVpcPublicSubnet2RouteTableCC0ACEA3",
    "DummyVpcPublicSubnet2RouteTableAssociationDCE3DC57",
    "DummyVpcPublicSubnet2SubnetD8B68431",
    "DummyVpcB6C30D0C",
    "DummyVpcVPCGW1C2C3DF0"
   ]
  },
  "FargateCluster019F03E8": {
   "Type": "Custom::AWSCDK-EKS-Cluster",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.awscdkeksfargateclusterteststack1awscdkawseksClusterResourceProviderframeworkonEventEFE84E94Arn"
     ]
    },
    "Config": {
     "version": "1.36",
     "roleArn": {
      "Fn::GetAtt": [
       "FargateClusterRole8E36B33A",
       "Arn"
      ]
     },
     "kubernetesNetworkConfig": {
      "ipFamily": "ipv4"
     },
     "resourcesVpcConfig": {
      "subnetIds": [
       {
        "Ref": "DummyVpcPublicSubnet1Subnet1073B36B"
       },
       {
        "Ref": "DummyVpcPublicSubnet2SubnetD8B68431"
       },
       {
        "Ref": "DummyVpcPrivateSubnet1SubnetAF2DFEB1"
       },
       {
        "Ref": "DummyVpcPrivateSubnet2Subnet718780F7"
       }
      ],
      "securityGroupIds": [
       {
        "Fn::GetAtt": [
         "FargateClusterControlPlaneSecurityGroup1021A150",
         "GroupId"
        ]
       }
      ],
      "endpointPublicAccess": true,
      "endpointPrivateAccess": true
     },
     "accessConfig": {
      "authenticationMode": "API"
     }
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "AttributesRevision": 5
   },
   "DependsOn": [
    "DummyVpcIGW6BB373C0",
    "DummyVpcPrivateSubnet1DefaultRouteE47453F6",
    "DummyVpcPrivateSubnet1RouteTableD58FDCEA",
    "DummyVpcPrivateSubnet1RouteTableAssociation88B5105F",
    "DummyVpcPrivateSubnet1SubnetAF2DFEB1",
    "DummyVpcPrivateSubnet2DefaultRoute4E564518",
    "DummyVpcPrivateSubnet2RouteTable1FB64BA1",
    "DummyVpcPrivateSubnet2RouteTableAssociationC3594446",
    "DummyVpcPrivateSubnet2Subnet718780F7",
    "DummyVpcPublicSubnet1DefaultRoute166DC84B",
    "DummyVpcPublicSubnet1EIPEF91269A",
    "DummyVpcPublicSubnet1NATGateway61554370",
    "DummyVpcPublicSubnet1RouteTable112DCFCF",
    "DummyVpcPublicSubnet1RouteTableAssociation8BCD2CE1",
    "DummyVpcPublicSubnet1Subnet1073B36B",
    "DummyVpcPublicSubnet2DefaultRoute1C29EE76",
    "DummyVpcPublicSubnet2RouteTableCC0ACEA3",
    "DummyVpcPublicSubnet2RouteTableAssociationDCE3DC57",
    "DummyVpcPublicSubnet2SubnetD8B68431",
    "DummyVpcB6C30D0C",
    "DummyVpcVPCGW1C2C3DF0",
    "FargateClusterCreationRoleDefaultPolicy629049D0",
    "FargateClusterCreationRole8C524AD8"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "FargateClusterKubectlReadyBarrier93746934": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Type": "String",
    "Value": "aws:cdk:eks:kubectl-ready"
   },
   "DependsOn": [
    "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
    "FargateClusterfargateprofiledefault10E54561",
    "FargateClusterCreationRoleDefaultPolicy629049D0",
    "FargateClusterCreationRole8C524AD8",
    "FargateCluster019F03E8"
   ]
  },
  "FargateClusterCoreDnsComputeTypePatch711BF1B2": {
   "Type": "Custom::AWSCDK-EKS-KubernetesPatch",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.awscdkeksfargateclusterteststack1awscdkawseksKubectlProviderframeworkonEvent8D9D0458Arn"
     ]
    },
    "ResourceName": "deployment/coredns",
    "ResourceNamespace": "kube-system",
    "ApplyPatchJson": "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"eks.amazonaws.com/compute-type\":\"fargate\"}}}}}",
    "RestorePatchJson": "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"eks.amazonaws.com/compute-type\":\"ec2\"}}}}}",
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "PatchType": "strategic"
   },
   "DependsOn": [
    "FargateClusterKubectlReadyBarrier93746934"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks-fargate-pods.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSFargatePodExecutionRolePolicy"
       ]
      ]
     }
    ]
   }
  },
  "FargateClusterfargateprofiledefault10E54561": {
   "Type": "Custom::AWSCDK-EKS-FargateProfile",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.awscdkeksfargateclusterteststack1awscdkawseksClusterResourceProviderframeworkonEventEFE84E94Arn"
     ]
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "Config": {
     "clusterName": {
      "Ref": "FargateCluster019F03E8"
     },
     "podExecutionRoleArn": {
      "Fn::GetAtt": [
       "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
       "Arn"
      ]
     },
     "selectors": [
      {
       "namespace": "default"
      },
      {
       "namespace": "kube-system"
      }
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.",
       {
        "Ref": "AWS::Region"
       },
       ".",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/",
       {
        "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
       },
       "/fed3f4fa1d8c52bf4fe8a16b16c3549ddf4c85ba67e30ccdc62eaf9b6dfdf688.json"
      ]
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "Parameters": {
     "referencetoawscdkeksfargateclusterteststack1KubectlLayerE604C7D3Ref": {
      "Ref": "KubectlLayer600207B5"
     },
     "referencetoawscdkeksfargateclusterteststack1FargateClusterKubectlHandlerRoleD4716BADArn": {
      "Fn::GetAtt": [
       "FargateClusterKubectlHandlerRole93DCDA21",
       "Arn"
      ]
     },
     "referencetoawscdkeksfargateclusterteststack1DummyVpcPrivateSubnet1Subnet4A1BC578Ref": {
      "Ref": "DummyVpcPrivateSubnet1SubnetAF2DFEB1"
     },
     "referencetoawscdkeksfargateclusterteststack1DummyVpcPrivateSubnet2SubnetD0BD33C4Ref": {
      "Ref": "DummyVpcPrivateSubnet2Subnet718780F7"
     },
     "referencetoawscdkeksfargateclusterteststack1FargateClusterB2995F98ClusterSecurityGroupId": {
      "Fn::GetAtt": [
       "FargateCluster019F03E8",
       "ClusterSecurityGroupId"
      ]
     }
    },
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.",
       {
        "Ref": "AWS::Region"
       },
       ".",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/",
       {
        "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
       },
       "/1c9ff3191697dcd18a83babb53a607cbfe4cf18ea5f405db5273f6457cd00fc8.json"
      ]
     ]
    }
   },
   "DependsOn": [
    "DummyVpcPrivateSubnet1DefaultRouteE47453F6",
    "DummyVpcPrivateSubnet1RouteTableAssociation88B5105F",
    "DummyVpcPrivateSubnet2DefaultRoute4E564518",
    "DummyVpcPrivateSubnet2RouteTableAssociationC3594446",
    "FargateClusterKubectlHandlerRoleDefaultPolicy3F5DBBB0",
    "FargateClusterKubectlHandlerRole93DCDA21"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  }
 },
 "Conditions": {
  "FargateClusterHasEcrPublic3641FEA6": {
   "Fn::Equals": [
    {
     "Ref": "AWS::Partition"
    },
    "aws"
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefDummyVpcB6C30D0C8DA8CBBF": {
   "Value": {
    "Ref": "DummyVpcB6C30D0C"
   },
   "Export": {
    "Name": "aws-cdk-eks-fargate-cluster-test-stack1:ExportsOutputRefDummyVpcB6C30D0C8DA8CBBF"
   }
  },
  "ExportsOutputRefDummyVpcPublicSubnet1Subnet1073B36B538AF908": {
   "Value": {
    "Ref": "DummyVpcPublicSubnet1Subnet1073B36B"
   },
   "Export": {
    "Name": "aws-cdk-eks-fargate-cluster-test-stack1:ExportsOutputRefDummyVpcPublicSubnet1Subnet1073B36B538AF908"
   }
  },
  "ExportsOutputRefDummyVpcPublicSubnet2SubnetD8B684313DA9A92B": {
   "Value": {
    "Ref": "DummyVpcPublicSubnet2SubnetD8B68431"
   },
   "Export": {
    "Name": "aws-cdk-eks-fargate-cluster-test-stack1:ExportsOutputRefDummyVpcPublicSubnet2SubnetD8B684313DA9A92B"
   }
  },
  "ExportsOutputRefDummyVpcPrivateSubnet1SubnetAF2DFEB1255D2AD9": {
   "Value": {
    "Ref": "DummyVpcPrivateSubnet1SubnetAF2DFEB1"
   },
   "Export": {
    "Name": "aws-cdk-eks-fargate-cluster-test-stack1:ExportsOutputRefDummyVpcPrivateSubnet1SubnetAF2DFEB1255D2AD9"
   }
  },
  "ExportsOutputRefDummyVpcPrivateSubnet2Subnet718780F7D3B4EBA1": {
   "Value": {
    "Ref": "DummyVpcPrivateSubnet2Subnet718780F7"
   },
   "Export": {
    "Name": "aws-cdk-eks-fargate-cluster-test-stack1:ExportsOutputRefDummyVpcPrivateSubnet2Subnet718780F7D3B4EBA1"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
